background svg bug fix
fixed background svgs covering following section. svgs now display:none at larger screen sizes.

--- a/sass/_commerce.scss
+++ b/sass/_commerce.scss
@@ -107,6 +107,9 @@
                                 bottom:unset;
                                 transform:unset;
                         }
+                        @include media($hugedesktop) {
+                                display : none;
+                        }
                 }
         }
 }
