--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -29,6 +29,7 @@ $grey-text : #8C94A5;
 $faded-orange : #FDF1E8;
 $pin-size: 12px;
 
+$hugedesktop: min-width 1600px;
 $biggerdesktop: max-width 1150px;
 $desktop: max-width 1024px;
 $tablet: max-width 820px;
